<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.jakeg.groupupapp.activity.activity.SetGroupMeetingTimeActivity">

    <LinearLayout
        android:id="@+id/set_group_meeting_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/set_group_meeting_back_button"
            android:layout_width="24dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/back_button" />

        <TextView
            android:id="@+id/create_group_next_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="10"
            android:textAlignment="textEnd"
            android:layout_gravity="end"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:textSize="30sp"/>
<!--            android:text="@string/next"-->
    </LinearLayout>

    <TextView
        android:id="@+id/set_group_meeting_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="28dp"
        android:text="@string/set_a_group_meeting_time"
        android:layout_gravity="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/new_group_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/in_date"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="5"
            android:layout_marginRight="24dp"
            android:layout_marginLeft="46dp"
            android:hint="@string/pick_a_date"
            android:textSize="18sp"
            android:layout_gravity="start"
            android:textAlignment="textStart" />

        <TextView
            android:id="@+id/in_time"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_marginTop="12dp"
            android:layout_marginRight="24dp"
            android:layout_marginLeft="46dp"
            android:hint="@string/pick_a_time"
            android:textSize="18sp"
            android:layout_gravity="start"
            android:textAlignment="textStart" />

        <TextView
            android:id="@+id/set_a_reminder_alert"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_marginTop="12dp"
            android:layout_marginRight="24dp"
            android:layout_marginLeft="46dp"
            android:hint="@string/set_a_reminder_alert"
            android:textSize="18sp"
            android:layout_gravity="start"
            android:textAlignment="textStart" />

    </LinearLayout>


    <Button
        android:id="@+id/create_group_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="24dp"
        android:textSize="18sp"
        style="?android:attr/borderlessButtonStyle"
        android:text="Create Group" />

</LinearLayout>