<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.jakeg.groupupapp.activity.activity.NameGroupActivity">

    <LinearLayout
        android:id="@+id/name_group_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/name_group_back_button"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/back_button" />

        <TextView
            android:id="@+id/name_group_next_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="10"
            android:textAlignment="textEnd"
            android:layout_gravity="end"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/next"
            android:textSize="30sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/name_goup_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="Create new group"
        android:layout_gravity="center"
        android:textSize="30sp" />

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/relativelayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/new_group_image"
            android:layout_width="263dp"
            android:layout_height="294dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center"
            android:text="Add image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@android:drawable/ic_menu_gallery" />

        <TextView
            android:id="@+id/myImageViewText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/new_group_image"
            android:layout_alignTop="@id/new_group_image"
            android:layout_alignRight="@id/new_group_image"
            android:layout_alignBottom="@id/new_group_image"
            android:layout_margin="1dp"
            android:gravity="center"
            android:text="Click to\nadd image"
            android:textSize="18sp"
            android:textColor="#000000" />

    </RelativeLayout>

    <EditText
        android:id="@+id/new_group_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:hint="@string/group_name_instructions"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/new_group_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:hint="@string/group_description"
        android:textAlignment="center" />

</LinearLayout>
